# timetravail

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
lib/: CMakeLists.txt
src/: CMakeLists.txt  animations.c  animations.h  camera.c  camera.h  game.c  game.h  main.c  mat.c  mat.h  model.c  model.h  shader.c  shader.h  system_events.c  test.c  test_behaviors.c  test_behaviors.h  types.h  vec.c  vec.h  wasm.h
src/GL/: gl.h
src/SDL/: sdl.c  sdl.h
src/eng/: array.c  array.h  camera.c  camera.h  draw.c  draw.h  entity.h  gl.h  image.c  image.h  mat.c  mat.h  model.c  model.h  shader.c  shader.h  str.c  str.h  texture.c  texture.h  types.h  utility.c  utility.h  vec.c  vec.h  vector.c  vector.h  wasm.c  wasm.h
src/eng/data/: inline_primitives.h  inline_shaders.h
src/eng/wasm/: events.c  gl.c  wasm.c
src/eng/wasm/GL/: gl.h
src/eng/wasm/SDL/: sdl.c  sdl.h
src/game/: combat.c  game_behaviors.c  game_behaviors.h  game_utility.c  level.h  levels.c  levels.h  moving_platform.c  player_abilities.c  player_behavior.c  player_behavior.h  player_movement.c  player_physics.c  time_behavior.c
src/levels/: level_1.c  level_2.c  level_3.c  level_editor.c  level_test.c  og_test.c
src/wasm/: events.c  gl.c  stdio.c  wasm.c
web/css/: style.css
web/js/: game.js  main.js
web/js/bind/: wasm_base.js  wasm_const.js  wasm_gl.js  wasm_stdio.js
web/res/shaders/: basic.frag  basic.vert
web/res/textures/: readme.txt
